2023/04/05 my/photos/posts 구현 중;

--- a/Spring/Photostagram/src/main/resources/templates/my/photos/posts.html
+++ b/Spring/Photostagram/src/main/resources/templates/my/photos/posts.html
@@ -20,186 +20,20 @@
                 <a class="mySortSelect">선택</a>
             </div>
             <div class="activityContents">
-                <a>
-                    <img th:src="@{/img/125x125.png}">
-                </a>
-                <a>
-                    <img th:src="@{/img/125x125.png}">
-                </a>
-                <a>
-                    <img th:src="@{/img/125x125.png}">
-                </a>
-                <a>
-                    <img th:src="@{/img/125x125.png}">
-                </a>
-                <a>
-                    <img th:src="@{/img/125x125.png}">
-                </a>
-                <a>
-                    <img th:src="@{/img/125x125.png}">
-                </a>
-                <a>
-                    <img th:src="@{/img/125x125.png}">
-                </a>
-                <a>
-                    <img th:src="@{/img/125x125.png}">
-                </a>
-                <a>
-                    <img th:src="@{/img/125x125.png}">
-                </a>
-                <a>
-                    <img th:src="@{/img/125x125.png}">
-                </a>
-                <a>
-                    <img th:src="@{/img/125x125.png}">
-                </a>
-                <a>
-                    <img th:src="@{/img/125x125.png}">
-                </a>
-                <a>
-                    <img th:src="@{/img/125x125.png}">
-                </a>
-                <a>
-                    <img th:src="@{/img/125x125.png}">
-                </a>
-                <a>
-                    <img th:src="@{/img/125x125.png}">
-                </a>
-                <a>
-                    <img th:src="@{/img/125x125.png}">
-                </a>
-                <a>
-                    <img th:src="@{/img/125x125.png}">
-                </a>
-                <a>
-                    <img th:src="@{/img/125x125.png}">
-                </a>
-                <a>
-                    <img th:src="@{/img/125x125.png}">
-                </a>
-                <a>
-                    <img th:src="@{/img/125x125.png}">
-                </a>
-                <a>
-                    <img th:src="@{/img/125x125.png}">
-                </a>
-                <a>
-                    <img th:src="@{/img/125x125.png}">
-                </a>
-                <a>
-                    <img th:src="@{/img/125x125.png}">
-                </a>
-                <a>
-                    <img th:src="@{/img/125x125.png}">
-                </a>
-                <a>
-                    <img th:src="@{/img/125x125.png}">
-                </a>
-                <a>
-                    <img th:src="@{/img/125x125.png}">
-                </a>
-                <a>
-                    <img th:src="@{/img/125x125.png}">
-                </a>
-                <a>
-                    <img th:src="@{/img/125x125.png}">
-                </a>
-                <a>
-                    <img th:src="@{/img/125x125.png}">
-                </a>
-                <a>
-                    <img th:src="@{/img/125x125.png}">
-                </a>
-                <a>
-                    <img th:src="@{/img/125x125.png}">
-                </a>
-                <a>
-                    <img th:src="@{/img/125x125.png}">
-                </a>
-                <a>
-                    <img th:src="@{/img/125x125.png}">
-                </a>
-                <a>
-                    <img th:src="@{/img/125x125.png}">
-                </a>
-                <a>
-                    <img th:src="@{/img/125x125.png}">
-                </a>
-                <a>
-                    <img th:src="@{/img/125x125.png}">
-                </a>
-                <a>
-                    <img th:src="@{/img/125x125.png}">
-                </a>
-                <a>
-                    <img th:src="@{/img/125x125.png}">
-                </a>
-                <a>
-                    <img th:src="@{/img/125x125.png}">
-                </a>
-                <a>
-                    <img th:src="@{/img/125x125.png}">
-                </a>
-                <a>
-                    <img th:src="@{/img/125x125.png}">
-                </a>
-                <a>
-                    <img th:src="@{/img/125x125.png}">
-                </a>
-                <a>
-                    <img th:src="@{/img/125x125.png}">
-                </a>
-                <a>
-                    <img th:src="@{/img/125x125.png}">
-                </a>
-                <a>
-                    <img th:src="@{/img/125x125.png}">
-                </a>
-                <a>
-                    <img th:src="@{/img/125x125.png}">
-                </a>
-                <a>
-                    <img th:src="@{/img/125x125.png}">
-                </a>
-                <a>
-                    <img th:src="@{/img/125x125.png}">
-                </a>
-                <a>
-                    <img th:src="@{/img/125x125.png}">
-                </a>
-                <a>
-                    <img th:src="@{/img/125x125.png}">
-                </a>
-                <a>
-                    <img th:src="@{/img/125x125.png}">
-                </a>
-                <a>
-                    <img th:src="@{/img/125x125.png}">
-                </a>
-                <a>
-                    <img th:src="@{/img/125x125.png}">
-                </a>
-                <a>
-                    <img th:src="@{/img/125x125.png}">
-                </a>
-                <a>
-                    <img th:src="@{/img/125x125.png}">
-                </a>
-                <a>
-                    <img th:src="@{/img/125x125.png}">
-                </a>
-                <a>
-                    <img th:src="@{/img/125x125.png}">
-                </a>
-                <a>
-                    <img th:src="@{/img/125x125.png}">
-                </a>
-                <a>
-                    <img th:src="@{/img/125x125.png}">
-                </a>
-                <a>
-                    <img th:src="@{/img/125x125.png}">
-                </a>
+                <th:block th:each="m:${sortMap}">
+                    <a th:href="@{/board/post (no=${m.value.no})}">
+                    <th:block th:if="${#strings.endsWith(m.value.firstThumb, '.mp4')} == true">
+                        <video th:src="|@{/}thumb/${m.value.firstThumb}"></video>
+                    </th:block>
+                    <th:block th:unless="${#strings.endsWith(m.value.firstThumb, '.mp4')} == true">
+                        <img th:src="|@{/}thumb/${m.value.firstThumb}">
+                    </th:block>
+                        <!--
+                        <input type="checkbox" th:id="${m.value.firstThumb}" th:data-value="${m.value.no}">
+                        <label th:for="${m.value.firstThumb}"></label>
+                        -->
+                    </a>
+                </th:block>
             </div>
         </div>
     </div>
