--- a/Spring/Photostagram/src/main/resources/static/css/myPage.css
+++ b/Spring/Photostagram/src/main/resources/static/css/myPage.css
@@ -156,4 +156,36 @@
 
     .activityTop {width: 100%; height: 40px; margin-left: 20px; margin-top:5px; float: left; position: relative;}
     .activityContents {margin-top: 20px; margin-left: 20px;}
-    .activityContents > a {margin: 10px; float: left;}
+    .activityContents > a {margin: 10px; float: left; width:125px; height:125px;}
+
+    .activityContents > a > img {
+        object-fit: cover;
+        width: 100%;
+        height: 100%;
+    }
+    .activityContents > a > video {
+        object-fit: cover;
+        width: 100%;
+        height: 100%;
+    }
+
+    input[type="checkbox"] {display: none;}
+    input[type="checkbox"] + label {
+        width: 20px;
+        height: 20px;
+        border: 1px solid white;
+        border-radius: 70%;
+        display: block;
+        position: relative;
+        top: -30px;
+        left: 100px;
+    }
+    input[type="checkbox"]:checked + label {
+        background: #32a4ff;
+        content: '✔';
+        font-size: 18px;
+        text-align: center;
+        position: relative;
+        top: -30px;
+        left: 100px;
+    }
