--- a/Spring/Photostagram/src/main/resources/templates/fragments/_modal.html
+++ b/Spring/Photostagram/src/main/resources/templates/fragments/_modal.html
@@ -119,7 +119,7 @@
                 <div class="tagSearches">
                     <div class="tagSearchUser">
                         <img th:src="@{/img/44884218_345707102882519_2446069589734326272_n.jpg}">
-                        <div>
+                        <div class="tagUserInfo">
                             <div>아이디</div>
                             <span>이름</span>
                         </div>
@@ -128,7 +128,7 @@
                 <div class="tagSearches">
                     <div class="tagSearchUser">
                         <img th:src="@{/img/44884218_345707102882519_2446069589734326272_n.jpg}">
-                        <div>
+                        <div class="tagUserInfo">
                             <div>아이디</div>
                             <span>이름</span>
                         </div>
@@ -137,7 +137,7 @@
                 <div class="tagSearches">
                     <div class="tagSearchUser">
                         <img th:src="@{/img/44884218_345707102882519_2446069589734326272_n.jpg}">
-                        <div>
+                        <div class="tagUserInfo">
                             <div>아이디</div>
                             <span>이름</span>
                         </div>
@@ -146,7 +146,7 @@
                 <div class="tagSearches">
                     <div class="tagSearchUser">
                         <img th:src="@{/img/44884218_345707102882519_2446069589734326272_n.jpg}">
-                        <div>
+                        <div class="tagUserInfo">
                             <div>아이디</div>
                             <span>이름</span>
                         </div>
