--- a/Spring/Photostagram/src/main/resources/static/css/aside.css
+++ b/Spring/Photostagram/src/main/resources/static/css/aside.css
@@ -1241,6 +1241,7 @@ div.modal-post
   border-radius: 20px;
   margin-right: 12px;
   cursor: pointer;
+  vertical-align: top;
 }
 div.modal-post
   div.wrapper
