--- a/Spring/Photostagram/src/main/resources/templates/fragments/_modal.html
+++ b/Spring/Photostagram/src/main/resources/templates/fragments/_modal.html
@@ -116,6 +116,8 @@
                 </div>
             </div>
             <div class="tagUserList">
+                <span class="snipper"></span>
+                <!--
                 <div class="tagSearches">
                     <div class="tagSearchUser">
                         <img th:src="@{/img/44884218_345707102882519_2446069589734326272_n.jpg}">
@@ -124,36 +126,20 @@
                             <span>이름</span>
                         </div>
                     </div>
-                </div>
-                <div class="tagSearches">
-                    <div class="tagSearchUser">
-                        <img th:src="@{/img/44884218_345707102882519_2446069589734326272_n.jpg}">
-                        <div class="tagUserInfo">
-                            <div>아이디</div>
-                            <span>이름</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="tagSearches">
-                    <div class="tagSearchUser">
-                        <img th:src="@{/img/44884218_345707102882519_2446069589734326272_n.jpg}">
-                        <div class="tagUserInfo">
-                            <div>아이디</div>
-                            <span>이름</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="tagSearches">
-                    <div class="tagSearchUser">
-                        <img th:src="@{/img/44884218_345707102882519_2446069589734326272_n.jpg}">
-                        <div class="tagUserInfo">
-                            <div>아이디</div>
-                            <span>이름</span>
-                        </div>
-                    </div>
-                </div>
+                </div>-->
             </div>
         </div>
+
+        <div id="tooltipArea">
+            <!--
+            <div class='tag1'>
+                <div></div>
+                <div><span>username</span><button>x</button></div>
+            </div>-->
+        </div>
+
+
+
 
 
         <!-- 포스트 메뉴 모달 -->
@@ -169,5 +155,6 @@
                 </button>
             </div>
         </div>
+
     </th:block>
 </html>
