--- a/Spring/Photostagram/src/main/resources/static/css/aside.css
+++ b/Spring/Photostagram/src/main/resources/static/css/aside.css
@@ -623,8 +623,8 @@ html {height: 100%;}
       .spinner {
           position: absolute;
           display: none;
-          width: 100%;
-          height: 100%;
+          width: 25px;
+          height: 25px;
           left: 0;
           top: 0;
           background-image: url(../img/GIF/spinner.gif);
@@ -1028,6 +1028,8 @@ html {height: 100%;}
 .tagSearchUser > img{
     width:46px;
     height:46px;
+    border-radius:50%;
+    object-fit: cover;
 }
 
 .tagUserInfo{
@@ -1048,6 +1050,40 @@ html {height: 100%;}
     color:#737373;
 }
 
+.snipper {
+  position: absolute;
+  display: none;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  background-image: url(../img/GIF/spinner.gif);
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-color: white;
+  background-position: center;
+}
+
+.tag1 {
+    position: absolute;
+    background: #000000;
+    padding:8px 12px;
+    border-radius:8px;
+    max-width:50px;
+    z-index:18;
+    width: 100%;
+    height: 34px;
+    display: block;
+}
+
+.tag1 > div > span{
+    color:white;
+}
+
+.tag1 > div > button{
+    border:none;
+    color:white;
+}
 /********** post Modal ************/
 div.modal-post {
   display: none;
