--- a/Spring/Photostagram/src/main/resources/templates/profile/index.html
+++ b/Spring/Photostagram/src/main/resources/templates/profile/index.html
@@ -281,7 +281,7 @@
                         <span>프로필 사진 바꾸기</span>
                     </div>
                     <ul id="photoBottom">
-                        <li class="addProf">사진 업로드</li>
+                        <li class="addProf" id="modalAddProf">사진 업로드</li>
                         <li class="deleteProf">현재 사진 삭제</li>
                         <li class="photoClose">취소</li>
                     </ul>
